js/js.translator/testData/incremental/invalidation/friendDependency/main/publicClass.0.kt
class PublicClassHeir : PublicClass() {
    override internal fun baz(): Int = 4
}
